--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 .profile_name {
     float: left;
     padding-left: 2cm;
-    color: #131213f1;
+    color:#FFFFFF;
     font-size: 15px;
     /* Add the styles here */
 }
